@@ -1,10 +1,12 @@
-googleVis 0.2.16 [2012-03-19]
+googleVis 0.2.16 [2012-05-17]
 ----------------------------
 
 Changes
 
  * Updated example in help file of gvisGeoChart for individual colour
    axis and added to vignette as well
+ * gvisMotionCharts accepts quarterly and weekly time dimensions.
+   Thanks to Jason Pickering for providing a patch 
 
 googleVis 0.2.15 [2012-03-04]
 ----------------------------
